syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "LocalizedTextProto";

import "google/protobuf/wrappers.proto";
import "sdc/biceps/localizedtextwidth.proto";

message LocalizedTextMsg {
  string string = 1;
  google.protobuf.StringValue a_ref = 2;
  google.protobuf.StringValue a_lang = 3;
  google.protobuf.UInt64Value a_version = 4;
  LocalizedTextWidthMsg a_text_width = 5;
}
